--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "ember-cli-dependency-checker": "^2.0.0",
     "ember-cli-deploy": "^1.0.2",
     "ember-cli-deploy-build": "^1.1.1",
-    "ember-cli-deploy-git": "^1.3.3",
+    "ember-cli-deploy-firebase-pack": "^0.3.2",
     "ember-cli-eslint": "^4.2.1",
     "ember-cli-fastboot": "^2.0.0",
     "ember-cli-htmlbars": "^2.0.1",
